--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -21,14 +21,16 @@ body:
       placeholder: Describe the issue
     validations:
       required: true
-  - type: checkboxes
+  - type: dropdown
+    id: method
     attributes:
       label: Method
       description: How did you run the script?
+      multiple: true
       options:
-      - label: Imported Bookmarklets.html
-      - label: "Put 'javascript:(code)' in the url bar or a bookmark"
-      - label: Pasted script into console
+        - Imported Bookmarklets.html
+        - "Put 'javascript:(code)' in the url bar or a bookmark"
+        - Pasted script into console
     validations:
       required: true
   - type: textarea
