--- a/.github/ISSUE_TEMPLATE/suggestion.yml
+++ b/.github/ISSUE_TEMPLATE/suggestion.yml
@@ -17,3 +17,12 @@ body:
       placeholder: Script function
     validations:
       required: true
+  - type: dropdown
+    id: method
+    attributes:
+      label: Method
+      description: Please make sure to read [the faq](https://github.com/Minesraft2/Blooket-Cheats/wiki#faq) before submitting any suggestions
+      options:
+        - I read the [faq questions](https://github.com/Minesraft2/Blooket-Cheats/wiki#faq) and my suggestion has not already been asked for or isn't possible
+    validations:
+      required: true
