--- a/.github/ISSUE_TEMPLATE/suggestion.yml
+++ b/.github/ISSUE_TEMPLATE/suggestion.yml
@@ -21,9 +21,9 @@ body:
     id: method
     attributes:
       label: Method
-      description: Please make sure to read [the faq](https://github.com/Minesraft2/Blooket-Cheats/wiki#faq) before submitting any suggestions
+      description: Please make sure to read [the FaQ](https://github.com/Minesraft2/Blooket-Cheats/wiki#faq) before submitting any suggestions
       options:
-        - I have not [the faq](https://github.com/Minesraft2/Blooket-Cheats/wiki#faq) and my suggestion will be closed immediately
-        - I read the [faq questions](https://github.com/Minesraft2/Blooket-Cheats/wiki#faq) and my suggestion has not already been asked for or isn't possible
+        - I have not the FaQ and my suggestion will be closed immediately
+        - I read the FaQ and my suggestion has not already been asked for or isn't possible
     validations:
       required: true
