--- a/.github/ISSUE_TEMPLATE/suggestion.yml
+++ b/.github/ISSUE_TEMPLATE/suggestion.yml
@@ -22,6 +22,7 @@ body:
     attributes:
       label: Method
       description: Please make sure to read [the FaQ](https://github.com/Minesraft2/Blooket-Cheats/wiki#faq) before submitting any suggestions
+      multiple: true
       options:
         - I have not the FaQ and my suggestion will be closed immediately
         - I read the FaQ and my suggestion has not already been asked for or isn't possible
