--- a/.github/ISSUE_TEMPLATE/suggestion.yml
+++ b/.github/ISSUE_TEMPLATE/suggestion.yml
@@ -18,13 +18,13 @@ body:
     validations:
       required: true
   - type: dropdown
-    id: method
+    id: confirm
     attributes:
-      label: Method
+      label: FaQ
       description: Please make sure to read [the FaQ](https://github.com/Minesraft2/Blooket-Cheats/wiki#faq) before submitting any suggestions
       multiple: true
       options:
-        - I have not the FaQ
-        - I read the FaQ and my suggestion has not already been asked for or isn't possible
+        - I have not read the FaQ
+        - I have read the FaQ and my suggestion has not already been asked for or isn't possible
     validations:
       required: true
